CRIANDO ROLES DE USUARIO PARA ADICIONAR ENDPOINTS DE RETORNO GLOBAL DOS DADOS