@@ -1,5 +1,6 @@
 package br.com.fiap.appSori.domain;
 
+import br.com.fiap.appSori.domain.enums.Role;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import org.springframework.data.annotation.Id;
@@ -10,6 +11,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.time.ZonedDateTime;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Data
@@ -28,53 +30,53 @@ public class Usuario  implements UserDetails {
     private ZonedDateTime atualizadoEm;
     private boolean ativo;
 
+    //ADIÇÃO 1: Campo de Perfil (Role)
+    private Role role;
+
+    // O Lombok gera os Getters e Setters para o campo 'role'
+
     public Usuario() {
         this.id = UUID.randomUUID().toString();
         this.ativo = true;
         this.criadoEm = ZonedDateTime.now();
         this.atualizadoEm = ZonedDateTime.now();
+        // ADIÇÃO 2: Define CLIENTE como padrão
+        this.role = Role.CLIENTE;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Por enquanto, não vamos usar roles ou permissões.
-        // Retornamos uma lista vazia de autoridades.
-        return Collections.emptyList();
+        // MODIFICAÇÃO: Retorna o perfil (role) do usuário
+        return List.of(this.role);
     }
 
     @Override
     public String getPassword() {
-        // Retorna a senha do usuário
         return this.senha;
     }
 
     @Override
     public String getUsername() {
-        // O Spring Security usará o e-mail como nome de usuário para autenticação
         return this.email;
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        // A conta nunca expira
         return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        // A conta nunca é bloqueada
         return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        // As credenciais nunca expiram
         return true;
     }
 
     @Override
     public boolean isEnabled() {
-        // A conta está habilitada se o campo 'ativo' for verdadeiro
         return this.ativo;
     }
 }
